cupt (2.3.0~) UNRELEASED; urgency=low

  * console:
    - Common options:
      - New options '--include-archives', '--exclude-archives',
        '--include-codenames', --exclude-codenames'.
  * lib:
    - system/resolvers/native:
      - Removing automatically installed packages: stopped considering
        those inter-package relations which are satisfied by some
        non-removable package.
      - Implemented partially sticked packages. This should get rid of
        duplicate solutions. (Closes: #641473)
    - download/progresses/console:
      - Printing 'download failed' messages: use a download number instead of
        the download description.
      - Printing 'download failed' messages: reformatted to have the error
        string earlier in the string and match the 'Get:<number>' style.
    - config:
      - New options 'cupt::cache::limit-releases::by-archive',
        'cupt::cache::limit-releases::by-archive::type'.
      - New options 'cupt::cache::limit-releases::by-codename',
        'cupt::cache::limit-releases::by-codename::type'.
    - system/worker:
      - Logging: log errors too.
    - cache:
      - Honor 'cupt::cache::limit-releases::*' options.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 22 Sep 2011 11:33:25 +0300

cupt (2.2.1) unstable; urgency=low

  * console:
    - Managing packages:
      - Fixed the work of action override options inside the interactive
        prompt for new package expressions.
      - 'markauto', 'unmarkauto': reject not installed packages. Thanks to
        Karol Kozłowski for the report.
  * lib:
    - system/resolvers/native:
      - Made sure that if the package is auto-removed there are no other
        resolver reasons present. Thanks to Karol Kozłowski for the report.
        (Closes: #643798)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 06 Oct 2011 20:42:16 +0300

cupt (2.2.0) unstable; urgency=low

  * Upload to unstable.
